--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <!-- new addition here -->
       </plugins>
     </pluginManagement>
   </build>
