--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,25 @@
           <version>3.0.0</version>
         </plugin>
         <!-- new addition here -->
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.7.5.201505241946</version>
+          <executions>
+            <execution>
+              <id>default-prepare-agent</id>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>default-report</id>
+              <goals>
+                <goal>report</goal>
+              </goals>
+             </execution>
+          </executions>
+          </plugin>
       </plugins>
     </pluginManagement>
   </build>
